--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,14 @@ http {
     sendfile on;
     server {
         server_name sammons.io;
+        charset utf-8;
         listen 80;
         root /data/nginx/static;
+        location ~* \.(?:jpg|jpeg|gif|png|woff2)$ {
+            expires 1h;
+            access_log off;
+            add_header Cache-Control "public";
+            add_header Pragma "public";
+        }
     }
 }
