--- a/nginx.conf
+++ b/nginx.conf
@@ -5,20 +5,18 @@ events {
 http {
     error_log /data/logs/error.log notice;
     access_log /data/logs/access.log;
-    include mime.types;
     gzip on;
     keepalive_timeout 65;
     sendfile on;
     server {
+        listen 80 default_server;
+        return 301 https://$host$request_uri;
+    }
+    server {
         server_name sammons.io;
-        charset utf-8;
-        listen 80;
+        listen 443 ssl;
+        ssl_certificate /data/variables/sammons.io.crt;
+        ssl_certificate_key /data/variables/sammons.io.key;
         root /data/nginx/static;
-        location ~* \.(?:jpg|jpeg|gif|png|woff2)$ {
-            expires 1h;
-            access_log off;
-            add_header Cache-Control "public";
-            add_header Pragma "public";
-        }
     }
 }
