--- a/nginx.conf
+++ b/nginx.conf
@@ -14,7 +14,7 @@ http {
     }
     server {
         server_name sammons.io;
-        listen 443 ssl;
+        listen 443 ssl http2;
         ssl_certificate /data/variables/sammons.io.crt;
         ssl_certificate_key /data/variables/sammons.io.key;
         root /data/nginx/static;
