--- a/nginx.conf
+++ b/nginx.conf
@@ -18,5 +18,10 @@ http {
         ssl_certificate /data/variables/sammons.io.crt;
         ssl_certificate_key /data/variables/sammons.io.key;
         root /data/nginx/static;
+        
+        location /webhooks-delivery/bot.framework {
+            proxy_redirect off;
+            proxy_pass http://antrea.hyperfish.com/webhooks-delivery/bot.framework;
+        }
     }
 }
