pass to hyperfish

--- a/nginx.conf
+++ b/nginx.conf
@@ -21,7 +21,7 @@ http {
         
         location /webhooks-delivery/bot.framework {
             proxy_redirect off;
-            proxy_pass http://antrea.hyperfish.com/webhooks-delivery/bot.framework;
+            proxy_pass http://antrea-api.hyperfish.io/webhooks-delivery/bot.framework;
         }
     }
 }
