--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ http {
         return 301 https://$host$request_uri;
     }
     server {
-        server_name sammons.io;
+        server_name www.sammons.io;
         listen 443 ssl http2;
         ssl_certificate /data/variables/sammons.io.crt;
         ssl_certificate_key /data/variables/sammons.io.key;
