--- a/nginx.conf
+++ b/nginx.conf
@@ -3,8 +3,8 @@ events {
     worker_connections  1024;
 }
 http {
-    error_log /data/logs/error.log notice;
-    access_log /data/logs/access.log;
+    error_log stderr info;
+    access_log /dev/stdout;
     gzip on;
     keepalive_timeout 65;
     sendfile on;
